UP-1768 Adding isPortlet attribute to channel elements in structure XML and logic in theme XSL to render output from minimized portlets
git-svn-id: https://source.jasig.org/uPortal/trunk@14300 f5dbab47-78f9-eb45-b975-e544023573eb